# nvcc-bug

./: CMakeLists.txt  README.md  main.cu
src/: main.cu
